--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
 </style>
   </head>
 <!--Make sure the form has the autocomplete function switched off:-->
-<form action="https://start.stackboard.one/invite/" method="get" autocomplete="off" onsubmit="window.location.href=this.action + '' + encodeURIComponent(this.elements['query'].value); return false;">
+<form action="https://start.stackboard.one/" method="get" autocomplete="off" onsubmit="window.location.href=this.action + '' + encodeURIComponent(this.elements['query'].value); return false;">
   
   
  
